add_subdirectory(AnalysisTree)
add_subdirectory(Calibrations)
add_subdirectory(ChargedTrackMultiplicity)
add_subdirectory(CosmicTagging)
add_subdirectory(Filters)
add_subdirectory(LEEPhotonAnalysis)
add_subdirectory(LLApp)
add_subdirectory(LLSelectionTool)
add_subdirectory(MicroBooNEWireCell)
add_subdirectory(OpticalDetectorAna)
add_subdirectory(PatternFilter)
add_subdirectory(TPCNeutrinoIDFilter)
add_subdirectory(UBXSec)
add_subdirectory(LArSoftExamples)
